src/other/mico-2.3.12/test/idl/error/case11.idl

/*
 * Duplicate member in enum.
 */

enum E {
  A,
  B,
  A
};
